fix:增加标点符号自定义规范

--- a/rime/simple/mysymbols.yaml
+++ b/rime/simple/mysymbols.yaml
@@ -40,29 +40,31 @@ punctuator:
     " ": {commit: " "}
     "!": {commit: "！"}
     "\"": {pair: ["“", "”"]}
-    "#": "＃"
-    "$": "￥"
-    "%": "％"
-    "&": "＆"
+    #"#": "＃"
+    #"$": "￥"
+    #"%": "％"
+    #"&": "＆"
     "'": {pair: ["‘", "’"]}
-    "(": "（"
-    ")": "）"
+    #"(": "（"
+    #")": "）"
     "*": ["*", "＊", "·", "・"]
     "+": "＋"
     ",": {commit: "，"}
-    "-": "－"
+    #"-": "－"
     ".": {commit: "。"}
     "/": ["、", "/", "／", "÷"]
-    ":": {commit: "："}
-    ";": {commit: "；"}
+    #":": {commit: "："}
+    #";": {commit: "；"}
     "<": "《"
     "=": "＝"
     ">": "》"
     "?": {commit: "？"}
     "@": "@"
-    "[": "「"
+    #"[": "「"
+    "[": "【"
     "\\": "、"
-    "]":  "」"
+    #"]":  "」"
+    "]":  "】"
     "^": {commit: "……"}
     _: "——"
     "`": "｀"
