fix:增加输入法切换设置

--- a/rime/simple/default.custom.yaml
+++ b/rime/simple/default.custom.yaml
@@ -9,3 +9,9 @@ patch:
     - {schema: luna_pinyin_simp}
   menu:
     page_size: 9
+  ascii_composer/switch_key:
+    Caps_Lock: noop
+    Shift_L: commit_code
+    Shift_R: inline_ascii
+    Control_L: clear
+    Control_R: commit_text
