--- a/rime/simple/default.custom.yaml
+++ b/rime/simple/default.custom.yaml
@@ -10,7 +10,7 @@ patch:
   menu:
     page_size: 9
   ascii_composer/switch_key:
-    Caps_Lock: noop
+    Caps_Lock: commit_code
     Shift_L: commit_code
     Shift_R: inline_ascii
     Control_L: clear
