--- a/rime/simple/luna_pinyin.extended.dict.yaml
+++ b/rime/simple/luna_pinyin.extended.dict.yaml
@@ -21,6 +21,7 @@ use_preset_vocabulary: true
 #雙拼不支持 luna_pinyin.cn_en 詞庫，請用戶手動禁用。
 import_tables:
   - luna_pinyin
+  - luna_pinyin.sgplus2
   - luna_pinyin.cn_en
   - luna_pinyin.daily
   - luna_pinyin.beijing
